--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -1,7 +1,21 @@
+#header {
+  width: 464px;
+  margin: auto;
+}
+
 #sudoku-container {
   text-align: center;
   width: 464px;
   margin: auto;
+}
+
+#speed-selector-container {
+  width: 464px;
+  margin: auto;
+}
+
+#speed-selector {
+  width: 100%;
 }
 
 .block {
@@ -26,13 +40,4 @@
 
 .col8 {
   border-right: 2px solid black;
-}
-
-#speed-selector-container {
-  width: 460px;
-  margin: auto;
-}
-
-#speed-selector {
-  width: 100%;
 }
