--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #eee;
+}
+
 #header {
   width: 464px;
   margin: auto;
@@ -19,6 +23,7 @@
 }
 
 .block {
+  background-color: white;
   width: 50px;
   height: 50px;
   display: inline-block;
