--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #C5D4E3;
+  background-color: #C7E3FA;
 }
 
 #header {
@@ -37,7 +37,7 @@ body {
   display: inline-block;
   border-left: 1px solid black;
   border-top: 1px solid black;
-  color: red;
+  color: #FF5F00;
 }
 
 .block.original {
